# email-ai-assistant-agent

./: .dockerignore  Dockerfile  agent.py  main.py  old_emails.json  pyproject.toml  start.sh
tools/: agent_tools.py  backfill_date_ts.py  ingestion.py  prompts.json
